src/kcm/ui/MuteButton.qml
@@ -7,13 +7,13 @@
 
 import QtQuick 2.0
 import QtQuick.Controls 2.5 as QQC2
-import "icon.js" as Icon
+import org.kde.plasma.private.volume 0.1
 
 QQC2.ToolButton {
     property bool muted: true
     property var toolTipText
 
-    icon.name: Icon.name(Volume, Muted, isPlayback ? "audio-volume" : "microphone-sensitivity")
+    icon.name: AudioIcon.forVolume(Volume, Muted, isPlayback ? "audio-volume" : "microphone-sensitivity")
     checkable: true
     checked: muted
     onMutedChanged: checked = muted
